@@ -54,6 +54,7 @@ VERSION 2.8-Beta 1
      not to fool users.
 
   BUGFIXES:
+   * Fix file-browser becoming empty when a file was moved to trash. (BR 317944)
    * Fix inability to reverse "Use Music Location" decision and inability to clear
      database once all collection directories have been unset. (BR 316216)
    * Fix `amarok --play file.mp3` option didn't actually start playback.
